# sistem_sekolah_py

./: .gitignore  README.md  alembic.ini  generate_schema.py  openapi.yaml  pyproject.toml  rencana_backend.md  requirements.txt  schema.sql  schema_mysql.sql  schema_postgresql.sql  schema_sqlite.sql  sekolah.db
alembic/: env.py
alembic/versions/: 2a85d67d1de0_.py
app/: admin.py  config.py  main.py
core/: database.py  dependencies.py  exceptions.py  schemas.py  security.py
features/auth/: models.py  repository.py  router.py  schemas.py  service.py
features/guru/: models.py  repository.py  router.py  schemas.py  service.py
features/guru_mengajar/: models.py  repository.py  router.py  schemas.py  service.py
features/kelas/: models.py  repository.py  router.py  schemas.py  service.py
features/laporan/: repository.py  router.py  schemas.py  service.py
features/mata_pelajaran/: models.py  repository.py  router.py  schemas.py  service.py
features/nilai/: models.py  repository.py  router.py  schemas.py  service.py  utils.py
features/siswa/: models.py  repository.py  router.py  schemas.py  service.py
