[project]
name = "sistem-sekolah-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.0",
    "pyjwt>=2.10.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.18",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.18.4",
]
